--- a/style/style.css
+++ b/style/style.css
@@ -1,125 +1,142 @@
 :root {
-  --main-bg-color: lightgrey;
-  --alt-bg-color: darkgrey;
-  --main-fg-color: white;
-  --light-accent-color: lightgreen;
-  --dark-accent-color: darkgreen;
+  --main-bg: lightgrey;
+  --alt-bg: darkgrey;
+  --main-fg: white;
+  --red-accent: #d64641;
 }
-
+  
 * {
   margin: 0px;
   padding: 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: var(--main-fg-color);
+  color: var(--main-fg);
 }
-  
+
 #grid {
   display: grid;
-  height: 100vh;
-  grid-template-rows: 1fr 10fr 1fr;
-  gap: 10px;
+  grid-template-rows: auto 20fr 3fr;
+  gap: 5px;
+  height: 99vh;
 }
-  
-#middle {
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  gap: 10px;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-  
+
 #navbar {
+  background: var(--main-bg);
+}
+
+#center {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 40fr;
-  background-color: var(--light-accent-color);
-}
-
-#navbar a {
-  text-align: center;
-  text-decoration: none;
-  font-size: 17px;
-  padding: 14px 16px;
-}
-  
-#navbar a:hover {
-  background-color: var(--dark-accent-color);
-}
-
-#home {
-  background-color: var(--dark-accent-color);
+  grid-template-columns: 1fr 5fr 1fr;
+  gap: 10px;
 }
 
 #relations {
-  border-radius: 10px;
-  background-color: var(--main-bg-color);
-}
-
-#canvas {
-  background-color: var(--main-fg-color);
+  background: var(--main-bg);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 #properties {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  padding: 10px;
-  border-radius: 10px;
-  background-color: var(--main-bg-color);
-}
-
-#properties div {
-  background-color: var(--alt-bg-color);
+  background: var(--main-bg);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 #timeline {
+  background: var(--main-bg);
+}
+
+/* TIMELINE */
+
+#timeline {
   display: grid;
-  grid-template-rows: 1fr 5fr;
-  gap: 10px;
-  border-radius: 10px;
-  margin: 0px 10px 10px 10px;
-  background-color: var(--main-bg-color);
+  grid-template-rows: 1fr 2fr;
+  gap: 5px;
+  padding: 5px 10px 15px 10px;
 }
 
 #timeline-buttons {
   display: grid;
-  grid-template-columns: auto 10fr auto auto;
-  gap: 10px;
-  margin: 10px 10px 0px 10px;
+  grid-template-columns: auto auto 100fr auto;
+  gap: 15px;
 }
 
 #timeline-buttons button {
-  border: solid var(--alt-bg-color);
-  border-radius: 7px;
-  transition-duration: 0.2s;
-  background-color: var(--alt-bg-color);
-  padding-left: 5px;
-  padding-right: 5px;
+  border-radius: 10px;
+  border: none;
+  background-color: var(--main-bg);
 }
 
-#timeline-buttons button:hover {
-  background-color: var(--main-bg-color);
-}
-
-#slider-container {
-  border: solid var(--alt-bg-color);
-  border-radius: 7px;
-  transition-duration: 0.2s;
-  background-color: var(--alt-bg-color);
-}
-
-#timeline-keyframes {
-  margin-left: 10px;
-  margin-bottom: 10px;
-}
-
-.timeline-frame {
-  border: solid var(--alt-bg-color);
-  background-color: var(--alt-bg-color);;
+#timeline-keyframes button {
   height: 100%;
   width: 20px;
-  margin-left: 10px;
+  border: none;
+  margin-right: 5px;
 }
 
-.timeline-frame:hover {
-  background-color: var(--main-bg-color);;
+.active-keyframe {
+  background-color: var(--red-accent);
 }
+
+.inactive-keyframe {
+  background-color: var(--alt-bg);
+}
+
+/* SLIDER */
+
+#slider {
+  -webkit-appearance: none;
+  height: 5px;
+  background: var(--alt-bg);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+#slider-label {
+  font-size: 15px;
+  vertical-align: middle;
+}
+
+/* NAVBAR */
+
+.navbar-button {
+  background-color: var(--main-bg);
+  color: var(--main-fg);
+  font-size: 15px;
+  padding: 6px 8px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.navbar-button:hover, .navbar-button:focus {
+  background-color: var(--alt-bg);
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--alt-bg);
+  min-width: 160px;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: var(--main-fg);
+  padding: 6px 8px;
+  text-decoration: none;
+  display: block;
+}
+  
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container whenthe user clicks on the dropdown button) */
+.show {display:block;}
