--- a/test/test.css
+++ b/test/test.css
@@ -1,169 +1,238 @@
-:root {
-  --main-bg-color: lightgrey;
-  --alt-bg-color: darkgrey;
-  --main-fg-color: white;
-  --light-accent-color: lightgreen;
-  --dark-accent-color: darkgreen;
-}
-
 * {
   margin: 0px;
   padding: 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: var(--main-fg-color);
+  color: white;
 }
-  
+
 #grid {
-  display: grid;
-  height: 100vh;
-  grid-template-rows: 1fr 10fr 1fr;
-  gap: 10px;
+display: grid;
+height: 100vh;
+grid-template-rows: 1fr 10fr 4fr;
+gap: 10px;
 }
-  
+
 #middle {
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  gap: 10px;
-  margin-right: 10px;
-  margin-left: 10px;
+display: grid;
+grid-template-columns: 1fr 3fr 1fr;
+gap: 10px;
+margin-right: 10px;
+margin-left: 10px;
 }
-  
+
 #navbar {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 40fr;
-  background-color: var(--light-accent-color);
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 1fr 40fr;
+background-color: lightblue;
 }
 
 #navbar a {
-  text-align: center;
-  text-decoration: none;
-  font-size: 17px;
-  padding: 14px 16px;
-}
-  
-#navbar a:hover {
-  background-color: var(--dark-accent-color);
+text-align: center;
+text-decoration: none;
+font-size: 17px;
+padding: 14px 16px;
 }
 
+#navbar a:hover {
+background-color: lightcoral;
+}
+
+
+
 #home {
-  background-color: var(--dark-accent-color);
+background-color: lightcoral;
 }
 
 #relations {
-  border-radius: 10px;
-  background-color: var(--main-bg-color);
+background-color: lightcoral;
+border-radius: 10px;
 }
 
 #canvas {
-  background-color: var(--main-fg-color);
+background-color: lightblue;
+}
+
+.label{
+color:black;
+font-size: 20px;
+
 }
 
 #properties {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  padding: 10px;
-  border-radius: 10px;
-  background-color: var(--main-bg-color);
+display: grid;
+grid-template-columns: 1fr 1fr;
+gap: 10px;
+padding: 15px;
+background-color: lightcoral;
+border-radius: 10px;
 }
 
 #properties div {
-  background-color: var(--alt-bg-color);
+background-color: lightblue;
+padding: 10px 10px;
+font-size:25px;
+color:black;
 }
 
 #timeline {
+display: grid;
+grid-template-columns: 1fr 4fr;
+gap: 0px;
+margin: 0px 0px 0px 0px;
+border-radius: 10px;
+}
+
+#timeline-left {
+display: grid;
+grid-template-rows: 1fr 4fr;
+gap: 0px;
+background-color: lightblue;
+margin: 0px 0px 10px 10px;
+border-radius: 10px;
+}
+
+#timeline-left-top {
   display: grid;
-  grid-template-rows: 1fr 5fr;
-  gap: 10px;
-  border-radius: 10px;
-  margin: 0px 10px 10px 10px;
-  background-color: var(--main-bg-color);
+  grid-template-columns: 1fr 2fr 1fr 1fr;
+  gap: 0px;
+}
+
+#timeline-left-top a {
+text-align: right;
+text-decoration: none;
+font-size: 17px;
+padding: 2px 2px;
+}
+
+#timeline-left-bottom {
+display: grid;
+grid-template-rows: 1fr 1fr 1fr 1fr;
+gap: 0px;
+}
+
+#timeline-left-bottom a{
+text-align: right;
+text-decoration: none;
+font-size: 14px;
+padding: 2px 2px;
+}
+
+#timeline-right {
+display: grid;
+grid-template-rows: 1fr 4fr;
+gap: 0px;
+background-color: lightcoral;
+margin: 0px 10px 10px 10px;
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+}
+
+#timeline-right-top {
+display: grid;
+grid-template-columns: 1fr 20fr 1fr 1fr;
+gap: 0px;
+}
+
+#timeline-right-top a {
+text-align: right;
+text-decoration: none;
+font-size: 17px;
+padding: 2px 2px;
+}
+
+#timeline-right-bottom {
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+gap: 0px;
+flex-grow: 1;
+}
+
+#timeline-right-bottom a{
+text-align: right;
+text-decoration: none;
+font-size: 14px;
+padding: 1em;
+}
+
+#horizontal-solid-line {
+border-top: 1px solid white;
+}
+
+#horizontal-dashed-line {
+border-top: 0.2px dashed white;
 }
 
 #timeline-buttons {
-  display: grid;
-  grid-template-columns: auto 10fr auto auto;
-  gap: 10px;
-  margin: 10px 10px 0px 10px;
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 1fr 10fr;
+gap: 7px;
+padding-left: 7px;
+padding-top: 7px;
 }
 
-#timeline-buttons button {
-  border: solid var(--alt-bg-color);
-  border-radius: 7px;
-  transition-duration: 0.2s;
-  background-color: var(--alt-bg-color);
-  padding-left: 5px;
-  padding-right: 5px;
+#timeline-buttons > button {
+border: solid lightblue;
+background-color: lightblue;
+border-radius: 7px;
+transition-duration: 0.2s;
 }
 
-#timeline-buttons button:hover {
-  background-color: var(--main-bg-color);
+#timeline-buttons > button:hover {
+background-color: lightcoral;
+color: white;
 }
 
-#slider-container {
-  border: solid var(--alt-bg-color);
-  border-radius: 7px;
-  transition-duration: 0.2s;
-  background-color: var(--alt-bg-color);
+html, timeline {
+height: 100%; 
+min-height: 100%
+}
+.timeline-body{
+height: 100%;
+border-right: 1px dashed white;
+}
+.timeline-solid-horizontal{
+border-top: 1px solid white;
+}
+.timeline-dashed-horizontal{
+border-top: 1px dashed white;
 }
 
-#timeline-keyframes {
-  margin-left: 10px;
-  margin-bottom: 10px;
+ul, #myUL {
+list-style-type: none;
 }
 
-.timeline-frame {
-  border: solid var(--alt-bg-color);
-  background-color: var(--alt-bg-color);;
-  height: 100%;
-  width: 20px;
-  margin-left: 10px;
+#myUL {
+margin: 0;
+padding: 0;
 }
 
-.timeline-frame:hover {
-  background-color: var(--main-bg-color);;
+.caret {
+cursor: pointer;
+-webkit-user-select: none; /* Safari 3.1+ */
+-moz-user-select: none; /* Firefox 2+ */
+-ms-user-select: none; /* IE 10+ */
+user-select: none;
 }
 
-.dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+.caret::before {
+content: "\25B6";
+color: black;
+display: inline-block;
+margin-right: 6px;
 }
 
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+.caret-down::before {
+-ms-transform: rotate(90deg); /* IE 9 */
+-webkit-transform: rotate(90deg); /* Safari */
+transform: rotate(90deg);  
 }
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
+.nested {
+display: none;
 }
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+.active {
+display: block;
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-  
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container whenthe user clicks on the dropdown button) */
-.show {display:block;}
