--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
   --main-fg: white;
   --red-accent: #d64641;
 }
-  
+
 * {
   margin: 0px;
   padding: 0px;
@@ -14,93 +14,36 @@
 
 #grid {
   display: grid;
-  grid-template-rows: auto 20fr 3fr;
-  gap: 5px;
-  height: 99vh;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-rows: auto 10fr 2fr;
+  grid-gap: 0.5em;
+
+  height: 100vh;
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
+
+#navbar, #timeline {
+  grid-column: 1 / 4;
+}
+
+.panel {
+  background: var(--main-bg);
+  border-radius: 10px;
+  padding: 1em;
+}
+
+/* NAV BAR */
 
 #navbar {
-  background: var(--main-bg);
-}
-
-#center {
-  display: grid;
-  grid-template-columns: 1fr 5fr 1fr;
-  gap: 10px;
-}
-
-#relations {
-  background: var(--main-bg);
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-#properties {
-  background: var(--main-bg);
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
-
-#timeline {
-  background: var(--main-bg);
-}
-
-/* TIMELINE */
-
-#timeline {
-  display: grid;
-  grid-template-rows: 1fr 2fr;
-  gap: 5px;
-  padding: 5px 10px 15px 10px;
-}
-
-#timeline-buttons {
-  display: grid;
-  grid-template-columns: auto auto 100fr auto;
-  gap: 15px;
-}
-
-#timeline-buttons button {
-  border-radius: 10px;
-  border: none;
-  background-color: var(--main-bg);
-}
-
-#timeline-keyframes button {
-  height: 100%;
-  width: 20px;
-  border: none;
-  margin-right: 5px;
-}
-
-.active-keyframe {
-  background-color: var(--red-accent);
-}
-
-.inactive-keyframe {
   background-color: var(--alt-bg);
 }
 
-/* SLIDER */
-
-#slider {
-  -webkit-appearance: none;
-  height: 5px;
-  background: var(--alt-bg);
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-#slider-label {
-  font-size: 15px;
-  vertical-align: middle;
-}
-
-/* NAVBAR */
-
 .navbar-button {
-  background-color: var(--main-bg);
-  color: var(--main-fg);
+  background-color: var(--alt-bg);
+  color: var(--alt-fg);
   font-size: 15px;
   padding: 6px 8px;
   border: none;
@@ -109,7 +52,7 @@
 
 /* Dropdown button on hover & focus */
 .navbar-button:hover, .navbar-button:focus {
-  background-color: var(--alt-bg);
+  background-color: var(--main-bg);
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -141,33 +84,34 @@
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container whenthe user clicks on the dropdown button) */
 .show {display:block;}
 
-ul, #myUL {
-  list-style-type: none;
+/* RELATIONSHIPS PANEL */
+
+#relations {
+  margin-left: 0.5em;
 }
 
-#myUL {
-  margin: 0;
-  padding: 0;
+ul {
+  list-style-type: none;
 }
 
 .caret {
   cursor: pointer;
-  -webkit-user-select: none; /* Safari 3.1+ */
-  -moz-user-select: none; /* Firefox 2+ */
-  -ms-user-select: none; /* IE 10+ */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
 .caret::before {
   content: "\25B6";
-  color: black;
+  color: var(--main-fg);
   display: inline-block;
   margin-right: 6px;
 }
 
 .caret-down::before {
-  -ms-transform: rotate(90deg); /* IE 9 */
-  -webkit-transform: rotate(90deg); /* Safari */
+  -ms-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg); 
   transform: rotate(90deg);  
 }
 
@@ -177,4 +121,51 @@ ul, #myUL {
 
 .active {
   display: block;
+}
+
+/* PROPERTIES PANEL */
+
+#properties {
+  margin-right: 0.5em;
+}
+
+/* TIMELINE PANEL */
+
+#timeline {
+  margin-left: 0.5em;
+  margin-bottom: 0.5em;
+  margin-right: 0.5em;
+
+  display: grid;
+  grid-template-columns: auto auto auto 100fr auto;
+  grid-template-rows: 1fr 2fr;
+  column-gap: 15px;
+  row-gap: 5px;
+
+  padding: 5px 10px 15px 10px;
+}
+
+.timeline-button {
+  border-radius: 10px;
+  border: none;
+  background-color: var(--main-bg);
+}
+
+#timeline-keyframes {
+  grid-column: 1 / 6;
+}
+
+#timeline-keyframes button {
+  height: 100%;
+  width: 20px;
+  border: none;
+  margin-right: 5px;
+}
+
+.active-keyframe {
+  background-color: var(--red-accent);
+}
+
+.inactive-keyframe {
+  background-color: var(--alt-bg);
 }
