--- a/test/test.css
+++ b/test/test.css
@@ -1,238 +1,180 @@
+:root {
+  --main-bg: lightgrey;
+  --alt-bg: darkgrey;
+  --main-fg: white;
+  --red-accent: #d64641;
+}
+  
 * {
   margin: 0px;
   padding: 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
+  color: var(--main-fg);
 }
 
 #grid {
-display: grid;
-height: 100vh;
-grid-template-rows: 1fr 10fr 4fr;
-gap: 10px;
-}
-
-#middle {
-display: grid;
-grid-template-columns: 1fr 3fr 1fr;
-gap: 10px;
-margin-right: 10px;
-margin-left: 10px;
+  display: grid;
+  grid-template-rows: auto 20fr 3fr;
+  gap: 5px;
+  height: 100vh;
 }
 
 #navbar {
-display: grid;
-grid-template-columns: 1fr 1fr 1fr 1fr 40fr;
-background-color: lightblue;
+  background: var(--main-bg);
 }
 
-#navbar a {
-text-align: center;
-text-decoration: none;
-font-size: 17px;
-padding: 14px 16px;
-}
-
-#navbar a:hover {
-background-color: lightcoral;
-}
-
-
-
-#home {
-background-color: lightcoral;
+#center {
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  gap: 10px;
 }
 
 #relations {
-background-color: lightcoral;
-border-radius: 10px;
-}
-
-#canvas {
-background-color: lightblue;
-}
-
-.label{
-color:black;
-font-size: 20px;
-
+  background: var(--main-bg);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 #properties {
-display: grid;
-grid-template-columns: 1fr 1fr;
-gap: 10px;
-padding: 15px;
-background-color: lightcoral;
-border-radius: 10px;
-}
-
-#properties div {
-background-color: lightblue;
-padding: 10px 10px;
-font-size:25px;
-color:black;
+  background: var(--main-bg);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 #timeline {
-display: grid;
-grid-template-columns: 1fr 4fr;
-gap: 0px;
-margin: 0px 0px 0px 0px;
-border-radius: 10px;
+  background: var(--main-bg);
 }
 
-#timeline-left {
-display: grid;
-grid-template-rows: 1fr 4fr;
-gap: 0px;
-background-color: lightblue;
-margin: 0px 0px 10px 10px;
-border-radius: 10px;
-}
+/* TIMELINE */
 
-#timeline-left-top {
+#timeline {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr 1fr;
-  gap: 0px;
-}
-
-#timeline-left-top a {
-text-align: right;
-text-decoration: none;
-font-size: 17px;
-padding: 2px 2px;
-}
-
-#timeline-left-bottom {
-display: grid;
-grid-template-rows: 1fr 1fr 1fr 1fr;
-gap: 0px;
-}
-
-#timeline-left-bottom a{
-text-align: right;
-text-decoration: none;
-font-size: 14px;
-padding: 2px 2px;
-}
-
-#timeline-right {
-display: grid;
-grid-template-rows: 1fr 4fr;
-gap: 0px;
-background-color: lightcoral;
-margin: 0px 10px 10px 10px;
-border-radius: 10px;
-display: flex;
-flex-direction: column;
-}
-
-#timeline-right-top {
-display: grid;
-grid-template-columns: 1fr 20fr 1fr 1fr;
-gap: 0px;
-}
-
-#timeline-right-top a {
-text-align: right;
-text-decoration: none;
-font-size: 17px;
-padding: 2px 2px;
-}
-
-#timeline-right-bottom {
-display: grid;
-grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-gap: 0px;
-flex-grow: 1;
-}
-
-#timeline-right-bottom a{
-text-align: right;
-text-decoration: none;
-font-size: 14px;
-padding: 1em;
-}
-
-#horizontal-solid-line {
-border-top: 1px solid white;
-}
-
-#horizontal-dashed-line {
-border-top: 0.2px dashed white;
+  grid-template-rows: 1fr 2fr;
+  gap: 5px;
+  padding: 5px 10px 15px 10px;
 }
 
 #timeline-buttons {
-display: grid;
-grid-template-columns: 1fr 1fr 1fr 1fr 10fr;
-gap: 7px;
-padding-left: 7px;
-padding-top: 7px;
+  display: grid;
+  grid-template-columns: auto auto 100fr auto;
+  gap: 15px;
 }
 
-#timeline-buttons > button {
-border: solid lightblue;
-background-color: lightblue;
-border-radius: 7px;
-transition-duration: 0.2s;
+#timeline-buttons button {
+  border-radius: 10px;
+  border: none;
+  background-color: var(--main-bg);
 }
 
-#timeline-buttons > button:hover {
-background-color: lightcoral;
-color: white;
+#timeline-keyframes button {
+  height: 100%;
+  width: 20px;
+  border: none;
+  margin-right: 5px;
 }
 
-html, timeline {
-height: 100%; 
-min-height: 100%
+.active-keyframe {
+  background-color: var(--red-accent);
 }
-.timeline-body{
-height: 100%;
-border-right: 1px dashed white;
+
+.inactive-keyframe {
+  background-color: var(--alt-bg);
 }
-.timeline-solid-horizontal{
-border-top: 1px solid white;
+
+/* SLIDER */
+
+#slider {
+  -webkit-appearance: none;
+  height: 5px;
+  background: var(--alt-bg);
+  border-radius: 10px;
+  overflow: hidden;
 }
-.timeline-dashed-horizontal{
-border-top: 1px dashed white;
+
+#slider-label {
+  font-size: 15px;
+  vertical-align: middle;
 }
+
+/* NAVBAR */
+
+.navbar-button {
+  background-color: var(--main-bg);
+  color: var(--main-fg);
+  font-size: 15px;
+  padding: 6px 8px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.navbar-button:hover, .navbar-button:focus {
+  background-color: var(--alt-bg);
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--alt-bg);
+  min-width: 160px;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: var(--main-fg);
+  padding: 6px 8px;
+  text-decoration: none;
+  display: block;
+}
+  
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container whenthe user clicks on the dropdown button) */
+.show {display:block;}
 
 ul, #myUL {
-list-style-type: none;
+  list-style-type: none;
 }
 
 #myUL {
-margin: 0;
-padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .caret {
-cursor: pointer;
--webkit-user-select: none; /* Safari 3.1+ */
--moz-user-select: none; /* Firefox 2+ */
--ms-user-select: none; /* IE 10+ */
-user-select: none;
+  cursor: pointer;
+  -webkit-user-select: none; /* Safari 3.1+ */
+  -moz-user-select: none; /* Firefox 2+ */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none;
 }
 
 .caret::before {
-content: "\25B6";
-color: black;
-display: inline-block;
-margin-right: 6px;
+  content: "\25B6";
+  color: black;
+  display: inline-block;
+  margin-right: 6px;
 }
 
 .caret-down::before {
--ms-transform: rotate(90deg); /* IE 9 */
--webkit-transform: rotate(90deg); /* Safari */
-transform: rotate(90deg);  
+  -ms-transform: rotate(90deg); /* IE 9 */
+  -webkit-transform: rotate(90deg); /* Safari */
+  transform: rotate(90deg);  
 }
 
 .nested {
-display: none;
+  display: none;
 }
 
 .active {
-display: block;
+  display: block;
 }
-
