Looping and pausing

--- a/style/index.css
+++ b/style/index.css
@@ -149,7 +149,7 @@ ul {
   margin-right: 0.5em;
 
   display: grid;
-  grid-template-columns: auto auto auto auto 100fr auto;
+  grid-template-columns: auto auto auto auto auto 100fr auto auto;
   grid-template-rows: 1fr 2fr;
   column-gap: 15px;
   row-gap: 5px;
@@ -165,7 +165,7 @@ ul {
 }
 
 #timeline-keyframes {
-  grid-column: 1 / 7;
+  grid-column: 1 / 9;
 }
 
 #timeline-keyframes button {
