--- a/style/index.css
+++ b/style/index.css
@@ -221,11 +221,29 @@ input[type=number]{
   height: 5px;
   background: var(--dark-green);
   border-radius: 10px;
-  overflow: hidden;
+  /* overflow: hidden; */
+}
+
+#slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
+  background: var(--light-grey);
+  border: 3px solid var(--dark-green);
+}
+
+#slider::-moz-range-thumb {
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
+  background: var(--light-grey);
+  border: 3px solid var(--dark-green);
 }
 
 #slider-label {
   font-size: 1em;
-  vertical-align: middle;
   font-weight: 600;
+  vertical-align: middle;
 }
