--- a/style/index.css
+++ b/style/index.css
@@ -194,6 +194,7 @@ input[type=number]{
   border: none;
   background-color: var(--light-grey);
   color: var(--dark-green);
+  cursor: pointer;
 }
 
 .loop-enabled {
@@ -217,6 +218,7 @@ input[type=number]{
   width: 20px;
   border: none;
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .active-keyframe {
