fixed timeline problems

--- a/style/index.css
+++ b/style/index.css
@@ -170,6 +170,9 @@ ul {
 
 #properties {
   margin-right: 0.5em;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 8fr;
 }
 
 #xpos{
