--- a/style/resources.css
+++ b/style/resources.css
@@ -17,7 +17,7 @@
 #navbar {
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 10fr 2fr;
-    background-color: #4B8057;
+    background-color: #5c996a;
     padding-bottom: 0px;
     height:60px;
 }
