--- a/style/index.css
+++ b/style/index.css
@@ -290,3 +290,51 @@ input[type=number]{
   font-weight: 600;
   vertical-align: middle;
 }
+#dim {
+  filter: brightness(50%);
+}
+/* Popup container - can be anything you want */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 320px;
+  height: 240px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 250%;
+  margin-bottom: 180px;
+  margin-left: 280px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  position: absolute;
+  top: 800%;
+  left: 500%;
+  margin-left: 500px;
+  border-width: 5px;
+  border-style: solid;
+  
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+}
+
