--- a/style/index.css
+++ b/style/index.css
@@ -113,16 +113,18 @@
 
 .dropdown-content label {
   display: inline-block;
+  background-color: var(--dark-grey);
   color: var(--white);
   padding: 6px 8px;
   cursor: pointer;
-  width: 90%;
+  width: 95%;
+  margin-top: 20px;
 }
-
+/*
 .dropdown-content label:hover {
   background-color: var(--light-green);
-  /* overflow: hidden; */
-}
+  /* overflow: hidden; 
+} */
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container whenthe user clicks on the dropdown button) */
 .show {display:block;}
@@ -352,4 +354,42 @@ input[type=number]{
   font-size: 1em;
   font-weight: 600;
   vertical-align: middle;
+}
+
+ /* The Modal (background) */
+ .modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
