--- a/style/newhome.css
+++ b/style/newhome.css
@@ -240,7 +240,10 @@ hero2.scroll{
     background-color: #d8f5c0;
     display: grid;
     grid-template-rows:1fr auto 3fr;
-    padding: 80px;
+    padding-left:80px;
+    padding-right: 80px;
+    padding-bottom: 80px;
+    padding-top: 80px;
 }
 
 #intro2 h1{
@@ -250,8 +253,31 @@ hero2.scroll{
     align-items: center; 
 }
 
+.introduction-person{
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    height: 80%;
+    gap: 30px;
+    padding-top: 10px;
+}
+
+.introduction-img{
+    max-width: 100%;
+    height:100%;
+    object-fit: scale-down;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.introduction-text{
+    text-align: left;
+    font-size: 25px;
+    font-weight: 100;
+}
+
 .tablink {
-    background-color: rgb(115, 235, 225);
+    background-color: rgb(46, 163, 105);
     color: white;
     float: left;
     border: none;
