--- a/style/newhome.css
+++ b/style/newhome.css
@@ -401,7 +401,19 @@ hero2.scroll{
 .email{
     background-color: #747474;
     width: 100%;
-    height:100%;
-    margin: 20px;
+    height:90px;
     border-radius: 10px;
+}
+
+.email-button{
+    background-color: #747474;
+    color:white;
+    font-size: 15px;
+    border-radius: 50px;
+    border-color: transparent;
+    margin:5px;
+    padding: 5px;
+    display: grid;
+    justify-content: left;
+    align-items: center; 
 }
