--- a/style/index.css
+++ b/style/index.css
@@ -68,6 +68,10 @@
   background-color: var(--light-green);
 }
 
+label:hover{
+  background-color: var(--light-green);
+}
+
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
